# fakecraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  block.c  block.h  chunk.c  chunk.h  chunk_mesh.c  collision.c  compile_flags.txt  config.h  config.ini  entity.c  entity.h  main.c  mesh.c  mesh.h  serialize.c  serialize.h  shader.fs  shader.fs.glsl  shader.vs  shader.vs.glsl  test.cpp  util.c  util.h  world.c  world.h  worldgen.c  worldgen.h
assets/: entity.fs.glsl  entity.vs.glsl  simple.fs.glsl  terrain.fs.glsl  terrain.vs.glsl
src/: block.c  block.cpp  block.h  block.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  chunk_mesh.c  chunk_mesh.cpp  chunk_mesh.h  collision.c  collision.cpp  collision.h  collision.hpp  config.cpp  config.h  config.hpp  direction.h  direction.hpp  entity.c  entity.cpp  entity.h  entity.hpp  entity_model.cpp  entity_model.hpp  fileio.c  fileio.cpp  fileio.h  fileio.hpp  graphics.cpp  graphics.hpp  hash.c  hash.h  hash.hpp  ini_parser.cpp  ini_parser.hpp  input.cpp  logger.c  logger.cpp  (+34 more)
src/engine/: config.cpp  config.hpp  ini_parser.cpp  input.hpp  logger.cpp  logger.hpp  resource_manager.cpp  resource_manager.hpp  serialize.cpp
src/entities/: entity.cpp  entity.hpp  entity_model.cpp  entity_model.hpp
src/graphics/: graphics.cpp  graphics.hpp  mesh.cpp  mesh.hpp  text.cpp  text.hpp
src/level/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  collision.cpp  collision.hpp  octree.cpp  octree.hpp  world.cpp  world.hpp  worldgen.cpp  worldgen.hpp
src/serialization/: ini_parser.cpp  ini_parser.hpp  serialize.cpp  serialize.hpp
src/util/: direction.hpp  fileio.cpp  fileio.hpp  hash.cpp  hash.hpp  point.cpp  point.hpp  timer.cpp  types.hpp  util.cpp
src_cpp/: block.cpp  chunk.cpp  chunk_mesh.hpp  collision.cpp  entity.cpp  entity.hpp  fileio.hpp  hash.cpp  logger.hpp  mesh.hpp  point.cpp  point.hpp  serialize.cpp  serialize.hpp  timer.cpp  world.hpp
